2005-09-13  "Dr. Werner Fink"  <werner@suse.de>

	* modules/clx/new-clx/demos/sokoban.lisp (find-outers):
	call DISPLAY-FORCE-OUTPUT
	* modules/clx/new-clx/clx.f (PUT-IMAGE): do not call XSync()
	(x_open_display): install error handlers here before
	XOpenDisplay() to catch errors there too
	(OPEN-DISPLAY): do not install error handlers

2005-09-12  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/test.tst: SHOW the results for FILE-OWNER
	physical-memory: guard against broken unixes, like FreeBSD 4.10-BETA
	stat-vfs: FreeBSD lacks this too

2005-09-12  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (%DISPLAY-XID): wrap XAllocID in X_CALL
	(image_put_and_destroy): wrapper for XPutImage & XDestroyImage
	(handle_image_z, PUT-IMAGE): use it
	(foreign_slot): wrapper for SLOT-VALUE & check_fpointer
	(get_ptr_object_and_display, get_font_info_and_display)
	(DISCARD-FONT-INFO): use it
	(create_image): wrapper for XCreateImage
	(handle_image_z, PUT-IMAGE): use it

2005-09-12  Sam Steingold  <sds@gnu.org>

	* genclisph.d (export_def): added
	(emit_define1): removed
	* lispbibl.d: use export_def() instead of emit_define() and
	emit_define1() most of the time.
	BENFIT: reliably correct definitions are exported
	COST: the definitions are not always readable
	TODO: use "gcc -E -dM" -- like with lispbibl.h -- instead

2005-09-12  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (FORCE-GCONTEXT-CHANGES): clean-up STACK
	(SHAPE-COMBINE): accept :SOURCE-KIND

2005-09-12  "Dr. Werner Fink"  <werner@suse.de>

	* modules/clx/new-clx/clx.f (GCONTEXT-ID, FORCE-GCONTEXT-CHANGES)
	(PUT-IMAGE, ALLOC-COLOR-PLANES, ensure_shape_extension)
	(SHAPE-VERSION, SHAPE-COMBINE, SHAPE-OFFSET, ICONIFY-WINDOW)
	(WITHDRAW-WINDOW): wrap X calls in X_CALL

2005-09-08  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (XLIB:CHANGE-POINTER-CONTROL): use
	Fixnum_minus1 instead of fixnum(-1) which is actually illegal

2005-09-08  Sam Steingold  <sds@gnu.org>
