@@ -22,25 +22,32 @@
 <para>Additionally, some higher level functionality is available:</para>
 
 <variablelist>
-<varlistentry><term><code>(sql:pq-finish &conn-r;)</code></term>
+<varlistentry id="sql:pq-finish"><term><code>(sql:pq-finish
+   &conn-r;)</code></term>
  <listitem><simpara><function>PQfinish</function> the &conn-r; and mark
    it as invalid</simpara></listitem></varlistentry>
-<varlistentry><term><code>(sql:pq-clear &res-r;)</code></term>
+<varlistentry id="sql:pq-clear"><term><code>(sql:pq-clear
+   &res-r;)</code></term>
  <listitem><simpara><function>PQclear</function> the &res-r; and mark
    it as invalid</simpara></listitem></varlistentry>
 <varlistentry><term><code>(sql:sql-error &conn-r; &res-r; &fmt-r;
    &rest-amp; &args-r;)</code></term>
  <listitem><simpara>finalize &conn-r; and &res-r; and &signal; an
    appropriate &error-t;</simpara></listitem></varlistentry>
-<varlistentry><term><code>(sql:sql-connect &key-amp; host port options
-   tty name login password)</code></term>
+<varlistentry id="sql:sql-connect"><term><code>(sql:sql-connect
+   &key-amp; host port options tty name login password)</code></term>
  <listitem><simpara>call <function>PQsetdbLogin</function> and return
    the &conn-r;</simpara></listitem></varlistentry>
-<varlistentry><term><code>(sql:with-sql-connection (var &rest-amp;
-   &option-r;s) &body-amp; &body-r;)</code></term>
- <listitem><simpara>call <function>sql:sql-connect</function>, execute
-   &body-r;, call <function>sql:pq-finish</function>
-</simpara></listitem></varlistentry>
+<varlistentry id="sql:with-sql-connection"><term><code>(sql:with-sql-connection
+   (var &rest-amp; &option-r;s &key-amp; log &allow-other-keys-amp;)
+   &body-amp; &body-r;)</code></term>
+ <listitem><orderedlist><listitem><simpara>bind <varname>*sql-log*</varname>
+     to the <replaceable>log</replaceable> argument</simpara></listitem>
+   <listitem><simpara>call
+     <function>sql:sql-connect</function></simpara></listitem>
+   <listitem><simpara>execute &body-r;</simpara></listitem>
+   <listitem><simpara>call <function>sql:pq-finish</function>
+</simpara></listitem></orderedlist></listitem></varlistentry>
 <varlistentry><term><code>(sql:sql-transaction &conn-r; &command-r;
    status &optional-amp; (clear-p &t;))</code></term>
  <listitem><simpara>execute the &command-r; via &conn-r;;
@@ -53,11 +60,11 @@
  <listitem><simpara>execure the &body-r; on the &res-r; of &command-r;,
    then <function>sql:pq-clear</function> the &res-r;
 </simpara></listitem></varlistentry>
-<varlistentry><term><code>sql:*sql-log*</code></term>
+<varlistentry id="sql:sql-log"><term><code>sql:*sql-log*</code></term>
  <listitem><simpara>when non-&nil;, should be a &stream-t;;
    <function>sql:sql-connect</function>
-   and <function>sql:sql-transaction</function> will write to it
-   (initially set to &standard-output-var;)
+   and <function>sql:sql-transaction</function>
+   will write to it (initially set to &nil;)
 </simpara></listitem></varlistentry></variablelist>
 
 <warning><para>Since <code>PQfinish</code> and <code>PQclear</code>
