@@ -1,3 +1,11 @@
+2005-09-13  Sam Steingold  <sds@gnu.org>
+
+	* modules/postgresql/sql.lisp (*sql-log*): init to NIL to avoid
+	savind a closed terminal stream into the image
+	(with-sql-connection): accept :LOG and bind *sql-log*
+	* modules/postgresql/postgresql.lisp ("SQL"): make DEFVAR exporting
+	Reported by Richard Ray <rray@mstc.state.ms.us>
+
 2005-09-13  "Dr. Werner Fink"  <werner@suse.de>
 
 	* modules/clx/new-clx/demos/sokoban.lisp (find-outers):
